--- a/css/hangman.css
+++ b/css/hangman.css
@@ -62,3 +62,71 @@ body{
 #buttonClicked{
     visibility: hidden;
 }
+
+
+@media only screen and (max-width:500px) and (min-width:350px) {
+    #button_id {
+        width: 20%;
+        height: 20%;
+        margin-left: 7px;
+        font-size: 20px;
+        background-color: peru;
+        border-color: grey;
+        border-radius: 4px;
+        border: none;
+    }
+
+    #button_id:hover{
+        background-color: rgba(205, 134, 63, 0.562);
+        cursor: pointer;
+        border-radius: 4px;
+        border: none;
+    }
+
+    #buttonClicked{
+        background-color: rgba(156, 106, 56, 0.692);
+        width: 20%;
+        height: 20%;
+        margin-left: 7px;
+        font-size: 20px;
+        border-color: grey;
+        cursor: not-allowed;
+        border-radius: 4px;
+        border: none;
+    }
+
+    #buttonClicked:active{
+        background-color: rgba(156, 106, 56, 0.692);
+        margin-left: 5px;
+        font-size: 20px;
+        border-color: grey;
+        cursor: not-allowed;
+        color: black;
+        border-radius: 4px;
+        border: none;
+    }
+
+    #word{
+        font-size: 45px;
+        color: black;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    #hangmanImg{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 15%;
+    }
+
+    body{
+        text-align: center;
+    }
+
+    #buttonClicked{
+        visibility: hidden;
+    }
+}
