--- a/css/hangman.css
+++ b/css/hangman.css
@@ -3,7 +3,7 @@
     height: 50px;
     margin-left: 7px;
     font-size: 20px;
-    background-color: peru;
+    background-color: rgba(219, 51, 51, 0.849);
     border-color: grey;
     border-radius: 4px;
     border: none;
@@ -18,6 +18,7 @@
     border-color: grey;
     border-radius: 4px;
     border: none;
+    position: relative;
 }
 
 #button_id:hover{
@@ -77,8 +78,8 @@ body{
 
 @media only screen and (max-width:500px) and (min-width:350px) {
     #button_id {
-        width: 20px;
-        height: 20px;
+        width: 20vw;
+        height: 20vh;
         margin-left: 7px;
         font-size: 20px;
         background-color: peru;
@@ -88,8 +89,8 @@ body{
     }
 
     #restart {
-        width: 50px;
-        height: 20px;
+        width: 50vw;
+        height: 20vw;
         margin-left: 7px;
         font-size: 20px;
         background-color: rgba(101, 113, 226, 0.815);
@@ -107,8 +108,8 @@ body{
 
     #buttonClicked{
         background-color: rgba(156, 106, 56, 0.692);
-        width: 20%;
-        height: 20%;
+        width: 20vw;
+        height: 20vh;
         margin-left: 7px;
         font-size: 20px;
         border-color: grey;
