--- a/css/hangman.css
+++ b/css/hangman.css
@@ -78,19 +78,17 @@ body{
 
 @media only screen and (max-width:500px) and (min-width:350px) {
     #button_id {
-        width: 250vw;
-        height: 250vh;
+        width: 20%;
+        height: 20%;
         margin-left: 7px;
         font-size: 150px;
-        background-color: peru;
-        border-color: grey;
         border-radius: 4px;
         border: none;
     }
 
     #restart {
-        width: 250vw;
-        height: 250vw;
+        width: 20%;
+        height: 20%;
         margin-left: 7px;
         font-size: 150px;
         background-color: rgba(101, 113, 226, 0.815);
@@ -108,8 +106,8 @@ body{
 
     #buttonClicked{
         background-color: rgba(156, 106, 56, 0.692);
-        width: 250vw;
-        height: 250vh;
+        width: 20%;
+        height: 20%;
         margin-left: 7px;
         font-size: 150px;
         border-color: grey;
