--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,12 +1,13 @@
 #button_id {
     width: 55px;
     height: 50px;
-    margin-left: 7px;
+    /* margin-left: 7px; */
     font-size: 20px;
     background-color: rgba(219, 51, 51, 0.849);
     border-color: grey;
     border-radius: 4px;
     border: none;
+    margin: 0.5%
 }
 
 #restart {
@@ -81,16 +82,15 @@ body{
         width: 20%;
         height: 20%;
         margin-left: 7px;
-        font-size: 150px;
         border-radius: 4px;
         border: none;
+        margin: 1%;
     }
 
     #restart {
         width: 20%;
         height: 20%;
         margin-left: 7px;
-        font-size: 150px;
         background-color: rgba(101, 113, 226, 0.815);
         border-color: grey;
         border-radius: 4px;
