--- a/css/hangman.css
+++ b/css/hangman.css
@@ -7,7 +7,7 @@
     border-color: grey;
     border-radius: 4px;
     border: none;
-    margin: 0.5%
+    margin: 0.5%;
 }
 
 #restart {
@@ -65,7 +65,7 @@ h1{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 15%;
+    width: 25%;
 }
 
 body{
@@ -76,20 +76,20 @@ body{
     visibility: hidden;
 }
 
-
 @media only screen and (max-width:500px) and (min-width:350px) {
     #button_id {
-        width: 20%;
-        height: 20%;
+        width: 20vw;
+        height: 10vh;
         margin-left: 7px;
         border-radius: 4px;
         border: none;
-        margin: 1%;
+        margin: 2%;
+        font-size: 0.8cm;
     }
 
     #restart {
-        width: 20%;
-        height: 20%;
+        width: 23vw;
+        height: 7vh;
         margin-left: 7px;
         background-color: rgba(101, 113, 226, 0.815);
         border-color: grey;
@@ -126,6 +126,13 @@ body{
         border: none;
     }
 
+    #hangmanImg{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 35%;
+    }
+
     #word{
         font-size: 30px;
         color: black;
@@ -135,12 +142,7 @@ body{
         text-align: center;
     }
 
-    #hangmanImg{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 15%;
-    }
+
 
     body{
         text-align: center;
@@ -150,3 +152,4 @@ body{
         visibility: hidden;
     }
 }
+
